[package]
name = "rust_solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[dependencies]
ahash = "0.8.6"
rayon = "1.8.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
